--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,37 +14,53 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    #gzip  on;
-
+    # 静态文件代理， 添加header
     server {
         listen       8081;
-
         root ./html;
         index index.html index.htm;
-        add_header thb_test hello;
-        add_header thb_test world;
+        add_header thb-addheader add;
+        add_header thb-addheader success;
         
     }
 
+    # 代理修改header
     server {
         listen       8082;
         location / {
             proxy_pass http://127.0.0.1:8081;
-            proxy_hide_header thb_test;
-            add_header thb_test www;
+            proxy_hide_header thb-addheader;
+            add_header thb-addheader "change addsuccess";
         } 
     }
 
+    # http代理https
     server {
         listen       8000;
-        server_name  thb_test1;
-        return 200 "thb_test1";
+        location / {
+            proxy_pass https://127.0.0.1:8001;
+        }
         
     }
 
+    # https服务
     server {
-        listen       8000;
-        server_name  thb_test2;
-        return 200 "thb_test2";
+        listen       8001 ssl;
+        default_type "text/plain;charset=utf-8"; 
+        ssl_certificate ssl/server.crt;
+        # ssl_certificate_key ssl/server.key;
+        ssl_certificate_key ssl/server_nopassword.key;
+        return 200 "https启动成功";
+    }
+
+    # https服务代理http
+    server {
+        listen       8002 ssl;
+        ssl_certificate ssl/server.crt;
+        # ssl_certificate_key ssl/server.key;
+        ssl_certificate_key ssl/server_nopassword.key;
+        location / {
+            proxy_pass http://127.0.0.1:8081;
+        } 
     }
 }
