添加文件索引配置

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,52 +1,64 @@
 #user  nobody;
-worker_processes  1;
+worker_processes 1;
 
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 
 http {
-    include       mime.types;
-    default_type  text/html;
+    include mime.types;
+    default_type text/html;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile on;
+    keepalive_timeout 65;
 
     # 静态文件代理， 添加header
     server {
-        listen       8081;
+        listen 8081;
         root ./html;
         index index.html index.htm;
         add_header thb-addheader add;
         add_header thb-addheader success;
-        
+
     }
 
     # 代理修改header
     server {
-        listen       8082;
+        listen 8082;
         location / {
             proxy_pass http://127.0.0.1:8081;
             proxy_hide_header thb-addheader;
             add_header thb-addheader "change addsuccess";
-        } 
+        }
+    }
+
+    # 静态文件代理
+    server {
+        charset utf-8;
+        listen 8083;
+        root ./doc-test;
+        autoindex on;
+        autoindex_exact_size off;
+        autoindex_localtime on;
+
+
     }
 
     # http代理https
     server {
-        listen       8000;
+        listen 8000;
         location / {
             proxy_pass https://127.0.0.1:8001;
         }
-        
+
     }
 
     # https服务
     server {
-        listen       8001 ssl;
-        default_type "text/plain;charset=utf-8"; 
+        listen 8001 ssl;
+        default_type "text/plain;charset=utf-8";
         ssl_certificate ssl/server.crt;
         # ssl_certificate_key ssl/server.key;
         ssl_certificate_key ssl/server_nopassword.key;
@@ -55,12 +67,12 @@ http {
 
     # https服务代理http
     server {
-        listen       8002 ssl;
+        listen 8002 ssl;
         ssl_certificate ssl/server.crt;
         # ssl_certificate_key ssl/server.key;
         ssl_certificate_key ssl/server_nopassword.key;
         location / {
             proxy_pass http://127.0.0.1:8081;
-        } 
+        }
     }
 }
