--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -50,6 +50,7 @@ http {
     server {
         listen 8000;
         location / {
+            proxy_set_header Host $http_host;
             proxy_pass https://127.0.0.1:8001;
         }
 
